--- a/Home-nav.css
+++ b/Home-nav.css
@@ -1,20 +1,28 @@
-/* Navigation bar */
+#navigationbar a {
+    display: block;
+}
+
+#shadow {
+    position: fixed;
+    width: 100vw;
+}
 
 .navbar {
     display: flex;
     position: fixed;
     justify-content: space-between;
     background-blend-mode: overlay;
-    backdrop-filter: blur(3px);
+    backdrop-filter: blur(0.8vw);
     background-color: #00000077;
     color: white;
     font-weight: bolder;
-    font-size: 25px;
+    font-size: calc(1.3vw + 5px);
     top: 0px;
     left: 0px;
     width: 100%;
     height: max-content;
-    transition: background-color 0.4s;
+    transition: background-color 0.4s, backdrop-filter 0.4s;
+    z-index: 1000;
 }
 
 .navbar a {
@@ -22,141 +30,204 @@
     color: white;
 }
 
-.navtitle a {
-    text-shadow: 0 0 2px rgba(232, 139, 255, 0.808),
-        0 0 2px rgba(131, 22, 255, 0.5),
-        0 0 2px rgba(206, 100, 255, 0.349);
+.navtitle:hover {
+    text-shadow: 0 0 0.2vw rgba(212, 139, 255, 0.808),
+        0 0 0.2vw rgba(189, 22, 255, 0.5),
+        0 0 0.2vw rgba(242, 100, 255, 0.349);
 }
 
-.navright>.navtitle:hover a {
-    text-shadow: 0 0 5px rgba(232, 139, 255, 0.808),
-        0 0 5px rgba(131, 22, 255, 0.5),
-        0 0 5px rgba(206, 100, 255, 0.349);
-}
-
-.navtitle a::after {
+.navbarcurrent a::after {
     position: absolute;
-    background-color: rgba(221, 163, 255, 0.829);
+    background-color: rgba(250, 216, 255, 0.829);
     content: '';
-    height: 6px;
-    border-radius: 6px;
-    bottom: -6%;
-    left: calc(0% + 15px);
-    width: calc(100% - 30px);
-    box-shadow: 0 0 5px rgba(132, 0, 255, 0.801);
+    height: calc(0.3vw + 1px);
+    border-radius: 100vw;
+    bottom: 10%;
+    left: 1.8vw;
+    width: calc(100% - 3.6vw);
+    box-shadow: 0 0 1vw rgba(183, 0, 255, 0.801);
     transition: 0.5s ease;
     transition-delay: 0.2s;
 }
 
 .navleft {
     cursor: pointer;
-    padding: 10px 15px;
+    padding: 0vw 1vw;
 }
 
 .navright {
-    margin-left: 5vw;
     align-items: center;
     cursor: pointer;
     display: flex;
-    padding: 10px 20px;
-    transition: scale 0.3s, ;
+    padding: 0 2.5vw 0 0;
+    transition: scale 0.3s;
 }
 
 .navtitle {
     position: relative;
-    padding: 14px 18px 16px 18px;
+    padding: 1.4vw 1.6vw 1.6vw;
     line-height: 1;
-    transition: text-shadow 0.4s;
-}
-
-.navtitle:hover {
-    text-shadow: 0 0 5px rgba(232, 139, 255, 0.808),
-        0 0 5px rgba(131, 22, 255, 0.5),
-        0 0 5px rgba(206, 100, 255, 0.349);
+    transition: text-shadow 0.4s ease;
 }
 
 .navtitle::after {
     position: absolute;
-    background-color: rgba(217, 159, 255, 0.829);
+    background-color: rgba(223, 174, 255, 0.829);
     content: '';
-    height: 6px;
-    border-radius: 6px;
-    bottom: -6%;
+    height: calc(0.3vw + 1px);
+    border-radius: 100vw;
+    bottom: 10%;
     left: 50%;
     width: 0%;
-    transition: 0.5s;
+    transition: left 0.5s ease, width 0.5s ease, box-shadow 0.5s ease;
     transition-delay: 0.2s;
 }
 
 .navtitle:hover::after {
-    left: calc(0% + 15px);
-    width: calc(100% - 30px);
-    box-shadow: 0 0 10px rgba(140, 0, 255, 0.801);
+    left: 1.5vw;
+    width: calc(100% - 3vw);
+    box-shadow: 0 0 1vw rgba(195, 0, 255, 0.801);
 }
 
 .navdroplist {
+    height: 0;
+    overflow-y: hidden;
     position: absolute;
+    font-size: calc(1.2vw + 4px);
+    top: calc(4.1vw + 5px);
+    left: 0px;
+    width: 170%;
+    max-width: 15vw;
+    padding: 0;
+    background-color: #080808c5;
+    border-radius: 1.5vw;
+    transition: 0.3s ease;
+}
+
+.navdroplist a {
+    padding: 1.5vw 2vw;
+    transition: 0.3s;
+}
+
+.navdroplist a:hover {
+    background-color: #5e5e5ec5;
+}
+
+#navbarPages:hover .navdroplist {
+    height: calc((4.2vw + 5px) * 4);
+}
+
+#navbarTrans:hover .navdroplist {
+    height: calc((4.2vw + 5px) * 3);
+}
+
+.navuser {
+    padding: 0px 0px 0px 2vw;
+}
+
+.navuser i {
+    font-size: calc(1.2vw + 4px);
+    width: calc(1.2vw + 4px);
+    height: calc(1.2vw + 4px);
+    padding: 0.9vw;
+    border: 0.25vw solid rgb(125, 0, 209);
+    border-radius: 50%;
+    text-align: center;
+    transition: 0.5s;
+    transition-delay: 0.1s;
+}
+
+.navuser:hover i {
+    box-shadow: 0 0 1vw rgba(132, 0, 255, 0.801);
+    text-shadow: 0 0 1vw rgba(212, 139, 255, 0.808),
+        0 0 1vw rgba(189, 22, 255, 0.5),
+        0 0 1vw rgba(242, 100, 255, 0.349);
 }
 
 /* Navigation Button */
 
 .navbutton {
     position: fixed;
-    overflow: hidden;
     background-blend-mode: overlay;
     backdrop-filter: blur(3px);
     color: white;
     width: max-content;
     padding: 0px;
+    top: 0.5vw;
+    right: 0.5vw;
+    background-color: #00000066;
+    border-radius: 100vw;
+    scale: 0;
+    opacity: 0;
+    transition: height 0.5s ease, opacity 0.5s ease, scale 0.5s ease;
+    z-index: 1000;
 }
 
-.navradius {
-    top: 5px;
-    right: 5px;
-    background-color: #00000066;
-    border-radius: 50px;
-}
 
 .navbutton div {
     cursor: pointer;
-    transition: height 0.5s ease, opacity 0.3s ease;
+    transition: height 0.5s ease, opacity 0.5s ease;
 }
 
 .navicon {
     text-align: center;
-    padding: 11px;
-    font-size: 25px;
+    padding: 1vw;
+    font-size: 4vw;
     border-radius: 50%;
-}
-
-.navradius .navicon {
-    scale: 0.7;
+    scale: 0.9;
+    transition: scale 0.5s ease, text-shadow 0.5s ease;
 }
 
 .navicon i {
     text-align: center;
-    width: 25px;
-    padding: 9px;
+    width: 4vw;
+    padding: 1vw;
 }
 
 .navitem i {
-    font-size: 20px;
-    margin: 7px 0px;
-    transition: 0.7s ease;
+    font-size: 3vw;
+    margin: 0.7vw 0px;
+    transition: 0.5s ease;
 }
 
 .navitcap {
-    font-size: 12px;
+    font-size: 1.5vw;
     font-weight: 400;
 }
 
 .navitem {
-    width: 55px;
-    height: 55px;
-    padding: 5px;
+    width: 7vw;
+    height: 7vw;
+    padding: 0.5vw;
     text-align: center;
     transition-delay: 0.4s;
-    transition: 0.7s ease;
+    transition: height 0.7s ease;
+}
+
+.navradius .navitem {
+    opacity: 0;
+}
+
+.navbutton .navuser {
+    padding: 1vw;
+    width: 6vw;
+    height: 6vw;
+    text-align: center;
+    transition-delay: 0s;
+    transition: 0.6s ease;
+    opacity: 0;
+}
+
+.navbutton .navuser i {
+    font-size: 2vw;
+    width: 2vw;
+    height: 2vw;
+    padding: 1.5vw;
+    border: 0.5vw solid rgb(174, 0, 255);
+    border-radius: 50%;
+    text-align: center;
+    transition: 0.5s ease;
+    transition-delay: 0.1s;
 }
 
 .navradius .navitem {
@@ -164,24 +235,17 @@
 }
 
 .navradius.show {
-    /* background-color: #000000d3; */
-    height: 410px;
-    transition: height 0.5s ease;
-    transition-delay: 0.2s;
+    height: 64vw;
 }
 
 .navradius.hide {
-    height: 65px;
-    transition: height 0.5s;
-    transition-delay: 0.2s;
+    height: 8vw;
 }
 
-/* .navradius:hover {
-    background-color: #000000d3;
-    height: 410px;
-    transition-delay: 0.2s;
+.navradius.over {
+    overflow-y: hidden;
 }
-*/
+
 .navitem.show {
     opacity: 1;
 }
@@ -190,101 +254,160 @@
     opacity: 0;
 }
 
-/*
-.navbutton:hover .navitem {
+.navuser.show {
     opacity: 1;
 }
-*/
-.navicon.show {
-    scale: 1;
-    transition: 0.4s;
+
+.navuser.hide {
+    opacity: 0;
 }
 
+.navicon.show,
 .navicon.hide {
-    scale: 1;
-    transition: 0.4s;
+    transition: scale 0.5s ease, text-shadow 0.5s ease;
 }
-
-/*
-.navbutton:hover .navicon {
-    scale: 1;
-    transition: 0.4s;
-} */
 
 .navicon:hover {
-    transition: 0.5s;
-    background-color: #00000066;
-    text-shadow: 0 0 5px rgb(130, 53, 255),
-        0 0 5px rgba(255, 22, 22, 0.76),
-        0 0 5px rgba(233, 63, 255, 0.897);
+    text-shadow: 0 0 1vw rgba(212, 139, 255, 0.808),
+        0 0 1vw rgba(189, 22, 255, 0.5),
+        0 0 1vw rgba(242, 100, 255, 0.349);
 }
 
 .navitem:hover {
-    text-shadow: 0 0 5px rgba(232, 139, 255, 0.808),
-        0 0 5px rgba(131, 22, 255, 0.5),
-        0 0 5px rgba(206, 100, 255, 0.349);
+    text-shadow: 0 0 1vw rgba(212, 139, 255, 0.808),
+        0 0 1vw rgba(189, 22, 255, 0.5),
+        0 0 1vw rgba(242, 100, 255, 0.349);
 }
 
-/* Responsive navbar */
-
-@media (max-width: 1366px) {
-    .navbar {
-        font-size: calc(1.1vw + 6px);
-    }
-
-    .navright {
-        padding: 5px 10px;
-    }
-
-    .navtitle {
-        padding: calc(0.8vw + 5px) calc(0.9vw + 5px) calc(0.8vw + 4px) calc(0.9vw + 5px);
-    }
-
-    .navtitle a::after {
-        height: 3px;
-        bottom: -3%;
-        left: calc(0.8vw + 4px);
-        width: calc(100% - 1.6vw - 8px);
-        box-shadow: 0 0 3px rgba(255, 123, 0, 0.801);
-
-    }
-
-    .navtitle::after {
-        height: 3px;
-        bottom: -4%;
-    }
-
-    .navtitle:hover::after {
-        left: calc(0.8vw + 4px);
-        width: calc(100% - 1.6vw - 8px);
-        box-shadow: 0 0 6px rgba(255, 123, 0, 0.801);
-    }
+#Pages,
+#Transpos {
+    position: relative;
 }
 
-@media (max-width: 665px) {
+.multiconpage,
+.multicontran {
+    position: absolute;
+    height: 1.5vw;
+    width: 8vw;
+    font-size: 1.5vw;
+    padding: 3.25vw 0;
+    font-weight: 400;
+    background-color: rgba(0, 0, 0, 0.452);
+    border-radius: 50%;
+    transition: 0.5s ease;
+}
+
+.multiconpage.hide,
+.multicontran.hide {
+    top: -1vw;
+    left: 0vw;
+    scale: 0;
+    opacity: 0;
+}
+
+.multiconpage.show,
+.multicontran.show {
+    scale: 1;
+    opacity: 1;
+}
+
+.show#lmulticon0 {
+    top: 8vw;
+    left: 8.5vw;
+}
+
+.show#lmulticon1 {
+    top: 6vw;
+    left: 10vw;
+}
+
+.show#lmulticon2 {
+    top: 3.1vw;
+    left: 15vw;
+}
+
+.show#lmulticon3 {
+    top: -1vw;
+    left: 14vw;
+}
+
+.show#lmulticon4 {
+    top: -5.1vw;
+    left: 15vw;
+}
+
+.show#lmulticon5 {
+    top: -8vw;
+    left: 10vw;
+}
+
+.show#lmulticon6 {
+    top: -10vw;
+    left: 8.5vw;
+}
+
+.show#rmulticon0 {
+    top: -10vw;
+    left: -8.5vw;
+}
+
+.show#rmulticon1 {
+    top: -8vw;
+    left: -10vw;
+}
+
+.show#rmulticon2 {
+    top: -5.1vw;
+    left: -15vw;
+}
+
+.show#rmulticon3 {
+    top: -1vw;
+    left: -14vw;
+}
+
+.show#rmulticon4 {
+    top: 3.1vw;
+    left: -15vw;
+}
+
+.show#rmulticon5 {
+    top: 6vw;
+    left: -10vw;
+}
+
+.show#rmulticon6 {
+    top: 8vw;
+    left: -8.5vw;
+}
+
+@media (max-width: 768px) {
     .navbar {
         background-color: #00000000;
         backdrop-filter: blur(0px);
-        transition: 0.3s;
+        transition: background-color 0.3s, backdrop-filter 0.3s;
     }
 
     .navright {
         scale: 0;
+    }
+
+    .navradius {
+        opacity: 1;
+        scale: 1;
     }
 }
 
 /* Responsive Navbutton */
 
-@media (min-width: 666px) {
+@media (min-width: 769px) {
     .navbutton {
         scale: 0;
-        opacity: 0.8;
-        transition: 0.2s ease;
+        opacity: 0;
     }
 
     .navbutton div {
         scale: 0;
         opacity: 0;
-        transition: 0.2s ease;
     }
 }
