--- a/a.Home-nav.css
+++ b/a.Home-nav.css
@@ -5,6 +5,12 @@
 #shadow {
     position: fixed;
     width: 100vw;
+    height: 5vw;
+    top: 0;
+    background-color: rgba(27, 27, 27, 0.897);
+    backdrop-filter: blur(300px);
+    opacity: 1;
+    transition: opacity 0.5s ease;
 }
 
 .navbar {
@@ -12,16 +18,13 @@
     position: fixed;
     align-items: center;
     justify-content: space-between;
-    background-blend-mode: overlay;
-    backdrop-filter: blur(0.8vw);
-    background-color: #00000077;
     color: white;
     font-weight: bolder;
     font-size: calc(1.3vw + 5px);
     top: 0px;
     left: 0px;
     width: 100%;
-    padding: 0.5vw 0;
+    padding: 0;
     transition: background-color 0.4s, backdrop-filter 0.4s;
     z-index: 100;
 }
@@ -392,10 +395,8 @@
 } */
 
 @media (max-width: 768px) {
-    .navbar {
-        background-color: #00000000;
-        backdrop-filter: blur(0px);
-        transition: background-color 0.3s, backdrop-filter 0.3s;
+    #shadow {
+        opacity: 0;
     }
 
     .navright {
