--- a/a.Home.css
+++ b/a.Home.css
@@ -1,3 +1,27 @@
-.about {
-    display: none;
+#body {
+    color: white;
+    font-family: 'montserrat';
+    padding: 3vw 8vw;
+}
+
+.space {
+    height: 6vw;
+}
+
+.title {
+    font-family: 'jost';
+    font-size: 3.5vw;
+    font-weight: 600;
+    line-height: 1.3;
+    padding: 1.2vw 1.7vw;
+    transition: 0.3s ease;
+    background: linear-gradient(to right, #6b11fa, #ffffff, #fff, #fff);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+}
+
+@media (max-width: 768px) {
+    .title {
+        font-size: 4vw;
+    }
 }
