--- a/a.Home.css
+++ b/a.Home.css
@@ -31,11 +31,14 @@
     scale: 0.9;
 }
 
+.contentzone {
+    width: 80vw;
+    padding: 2vw;
+}
+
 .about .contentzone {
     display: grid;
     grid-template-columns: repeat(2, 2fr);
-    width: 80vw;
-    padding: 2vw;
     background-color: rgb(24, 24, 24);
     border-radius: 2vw;
     box-shadow: 0 0 1vw #6b11fa;
@@ -70,6 +73,8 @@
 .contenttitle.myinfo {
     color: #e7beff;
     font-size: 2.3vw;
+    width: fit-content;
+    cursor: pointer;
 }
 
 .bodytext.myinfo {
@@ -80,6 +85,7 @@
     margin-bottom: 1vw;
     margin-left: 1vw;
     width: fit-content;
+    cursor: pointer;
 }
 
 .bodytext.myinfo:hover {
@@ -91,6 +97,7 @@
     border-radius: 1.2vw;
     box-shadow: inset 0 0 1.5vw rgb(0, 0, 0);
     transition: box-shadow 0.3s ease;
+    cursor: pointer;
 }
 
 .content.declare:hover {
@@ -108,6 +115,10 @@
 .bodytext.declare {
     margin: 0 2vw 1vw;
     font-size: 1.3vw;
+}
+
+.bold {
+    font-weight: 600;
 }
 
 .linktomyprofile {
@@ -129,6 +140,65 @@
     color: rgb(24, 24, 24);
     opacity: 0.8;
     box-shadow: 0 0 0.8vw #6b11fa;
+}
+
+.skills .contentzone {
+    display: grid;
+    grid-template-columns: repeat(3, 4fr);
+    width: 88vw;
+    text-align: center;
+    gap: 2vw;
+    margin: 0 -4vw;
+    scale: 0.8;
+}
+
+.skill {
+    position: relative;
+}
+
+.skillname {
+    font-size: 2.5vw;
+    font-weight: 500;
+    font-family: 'prompt';
+    width: 24vw;
+    padding: 2vw;
+    border: 0.1vw solid #6b11fa;
+    border-radius: 2vw;
+    box-shadow: inset 0 0 1vw rgb(107, 20, 179);
+    transition: box-shadow 0.4s ease, color 0.4s ease, border 0.4s ease;
+    cursor: pointer;
+}
+
+.skillconfig {
+    position: absolute;
+    z-index: 10;
+    display: flex;
+    align-items: center;
+    border-radius: 0vw;
+    font-size: 1.6vw;
+    height: 0vw;
+    padding: 0vw 2vw;
+    line-height: 1.4;
+    opacity: 0;
+    overflow: hidden;
+    background: linear-gradient(210deg, #7b2df7, #58008b);
+    transition: height 0.4s ease, margin 0.4s ease, border-radius 0.4s ease, opacity 0.3s ease, box-shadow 0.6s ease;
+}
+
+.skillname:hover {
+    box-shadow: inset 0 0 1.5vw rgb(170, 65, 255);
+    border: 0.1vw solid #b384ff;
+    background: linear-gradient(210deg, #6b11fa, #8c0cd6);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+}
+
+.skillname:hover~.skillconfig {
+    opacity: 1;
+    height: 14vw;
+    margin-top: 0.5vw;
+    border-radius: 2vw;
+    box-shadow: 0 0 1vw #6b11fa;
 }
 
 @media (max-width: 768px) {
