--- a/a.Home.css
+++ b/a.Home.css
@@ -14,7 +14,7 @@
     font-size: 3.5vw;
     font-weight: 600;
     line-height: 1.3;
-    padding: 1.2vw 1.7vw 3vw;
+    padding: 1.2vw 1.7vw 0;
     transition: 0.3s ease;
     background: linear-gradient(to right, #6b11fa, #6b11fa, #ce7bff, #fff);
     -webkit-background-clip: text;
@@ -25,10 +25,6 @@
     font-size: 1.5vw;
     line-height: 1.5;
     text-align: justify;
-}
-
-.about {
-    scale: 0.9;
 }
 
 .contentzone {
@@ -42,6 +38,10 @@
     background-color: rgb(24, 24, 24);
     border-radius: 2vw;
     box-shadow: 0 0 1vw #6b11fa;
+    margin-top: -2vw;
+    margin-bottom: 2vw;
+    scale: 0.75;
+    transition: scale 0.4s ease, margin-top 0.4s ease;
 }
 
 .content {
@@ -92,7 +92,7 @@
     opacity: 80%;
 }
 
-.content.declare {
+.content.pasion {
     background-color: rgb(41, 41, 41);
     border-radius: 1.2vw;
     box-shadow: inset 0 0 1.5vw rgb(0, 0, 0);
@@ -100,21 +100,21 @@
     cursor: pointer;
 }
 
-.content.declare:hover {
+.content.pasion:hover {
     box-shadow: inset 0 0 2.5vw rgb(0, 0, 0);
 }
 
-.content.declare:hover .contenttitle {
+.content.pasion:hover .contenttitle {
     text-shadow: 0 0 0.5vw #6b11fa;
 }
 
-.contenttitle.declare {
+.contenttitle.pasion {
     margin-left: 2vw;
 }
 
-.bodytext.declare {
+.bodytext.pasion {
     margin: 0 2vw 1vw;
-    font-size: 1.3vw;
+    text-align: left;
 }
 
 .bold {
@@ -126,8 +126,8 @@
     font-family: 'prompt';
     font-weight: 700;
     color: #ffffff;
-    bottom: 2vw;
-    left: 2vw;
+    bottom: 3vw;
+    right: 3vw;
     font-size: 1.5vw;
     padding: 1.4vw 2vw;
     background: linear-gradient(36deg, #6b11fa, #b12aff);
@@ -149,7 +149,9 @@
     text-align: center;
     gap: 2vw;
     margin: 0 -4vw;
-    scale: 0.8;
+    scale: 0.75;
+    transition-delay: 0.1s;
+    transition: scale 0.4s ease;
 }
 
 .skill {
@@ -204,5 +206,14 @@
 @media (max-width: 768px) {
     .title {
         font-size: 4vw;
+    }
+
+    .about .contentzone {
+        scale: 1;
+        margin-top: 3vw;
+    }
+
+    .skills .contentzone {
+        scale: 0.85;
     }
 }
