--- a/a.Home.css
+++ b/a.Home.css
@@ -109,12 +109,12 @@
 }
 
 .contenttitle.pasion {
-    margin-left: 2vw;
+    margin-left: 3vw;
 }
 
 .bodytext.pasion {
-    margin: 0 2vw 1vw;
-    text-align: left;
+    margin: 0 3vw 1vw;
+    text-align: justify;
 }
 
 .bold {
@@ -203,6 +203,179 @@
     box-shadow: 0 0 1vw #6b11fa;
 }
 
+.myproject {
+    margin: auto;
+    padding: 4vw 0vw;
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    gap: 1vw;
+    text-align: center;
+    align-items: center;
+    align-content: center;
+    margin-top: -1vw;
+    transition: margin-top 0.3s ease, scale 0.3s ease;
+}
+
+.project {
+    position: relative;
+    width: 16vw;
+    height: 16vw;
+    background-color: #6a11fa00;
+    border-radius: 50%;
+    display: grid;
+    align-items: center;
+    text-align: center;
+    grid-template-columns: repeat(1, 1fr);
+    margin: auto;
+}
+
+.workbutton {
+    position: absolute;
+    left: 0;
+    right: 0;
+    background-color: #e7beff00;
+    width: 100%;
+    height: 100%;
+    border-radius: 20%;
+    scale: 0.4;
+    z-index: 0;
+}
+
+.work {
+    position: absolute;
+    left: 0;
+    top: 0;
+    transform: scale(0.3);
+    width: 16vw;
+    height: 16vw;
+    background-color: #6a11fa00;
+    border-radius: 50%;
+    display: grid;
+    align-items: center;
+    text-align: center;
+    grid-template-columns: repeat(3, 3fr);
+    gap: 0.5vw;
+    transition: all 0.5s ease;
+}
+
+.work a {
+    color: rgba(255, 255, 255, 0);
+    font-size: 1.8vw;
+    font-weight: 500;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 5vw;
+    width: 5vw;
+    border-radius: 50%;
+    background-color: #ffffffe8;
+    transform: scale(0.7);
+    transition: color 0.5s ease, background-color 0.6s ease, transform 0.5s ease, box-shadow 0.5s ease;
+}
+
+.work .work0 {
+    grid-column: 2;
+    grid-row: 2;
+    background-color: #ffffff;
+    font-size: 2vw;
+    font-weight: 900;
+    font-family: 'jost';
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 5vw;
+    width: 5vw;
+    border-radius: 50%;
+    transform: scale(0.7);
+    transition: color 0.5s ease, background-color 0.6s ease, transform 0.5s ease, box-shadow 0.5s ease;
+}
+
+.work:hover {
+    transform: scale(1.3);
+}
+
+.work:hover a {
+    transform: scale(1);
+    color: #fff;
+    background-color: #6a11fa70;
+    transition: background-color 0.3s ease;
+    box-shadow: inset 0 0 1.5vw rgb(170, 65, 255);
+}
+
+.work a:hover {
+    box-shadow: 0 0 1vw rgb(225, 0, 255), inset 0 0 1.5vw rgb(170, 65, 255);
+}
+
+.work:hover .work0 {
+    background: linear-gradient(90deg, #5900ff, #ffffff);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    transition: background-color 0.3s ease;
+}
+
+.none {
+    transition: opacity 0.4s ease;
+    display: none;
+}
+
+.none:hover {
+    opacity: 0;
+}
+
+.contact .title {
+    margin-bottom: 4vw;
+}
+
+input,
+textarea {
+    display: block;
+    background-color: rgb(24, 24, 24);
+    border: none;
+    box-sizing: border-box;
+    padding: 1.2vw 2.5vw;
+    margin: auto;
+    margin-top: 1.5vw;
+    border: 0.1vw solid #5900ff;
+    border-radius: 2vw;
+    width: 60%;
+    color: white;
+    font-size: 1.6vw;
+    resize: vertical;
+    box-shadow: 0 0 0.5vw #5900ff;
+    caret-color: #5900ff;
+    transition: transform 0.4s ease, border-color 0.4s ease, box-shadow 0.4s ease;
+}
+
+input:focus,
+textarea:focus {
+    transform: scale(1.05);
+    border-color: #8a4aff;
+    box-shadow: 0 0 1vw #5900ff;
+}
+
+.sendcontact {
+    font-size: 1.7vw;
+    font-weight: 600;
+    text-align: center;
+    background: linear-gradient(45deg, #5900ff, #db82ff);
+    width: 60%;
+    box-sizing: border-box;
+    padding: 2vw 1.8vw;
+    border-radius: 50vw;
+    margin: auto;
+    margin-top: 3vw;
+}
+
+#copyright {
+    text-align: center;
+    background-color: rgba(0, 0, 0, 0.342);
+    width: 97vw;
+    margin-left: -8vw;
+    padding: 1.5vw;
+    font-size: 1.6vw;
+    color: rgba(255, 255, 255, 0.747);
+}
+
 @media (max-width: 768px) {
     .title {
         font-size: 4vw;
@@ -215,5 +388,15 @@
 
     .skills .contentzone {
         scale: 0.85;
+    }
+
+
+    .myproject {
+        grid-template-columns: repeat(2, 2fr);
+        width: 42vw;
+    }
+
+    .none {
+        display: none;
     }
 }
