--- a/reset.css
+++ b/reset.css
@@ -153,7 +153,7 @@ html {
 }
 
 ::-webkit-scrollbar-thumb {
-	background-color: #9e4affa8;
+	background: linear-gradient(0deg, #7a4affa8, #e6c2ff8e);
 	border-radius: 1vw;
 }
 
@@ -200,7 +200,6 @@ input,
 textarea {
 	line-height: 1.5;
 	outline: none;
-	caret-color: rgba(0, 0, 0, 0.192);
 	-webkit-user-select: text;
 	user-select: auto;
 	-webkit-user-select: auto;
@@ -211,7 +210,7 @@ textarea {
 
 input::selection,
 textarea::selection {
-	background-color: #a200ff;
+	background-color: #5900ff;
 	color: #ffffff;
 }
 
