--- a/a.Home.css
+++ b/a.Home.css
@@ -2,6 +2,7 @@
     color: white;
     font-family: 'montserrat';
     padding: 0vw 8vw;
+    overflow: hidden;
 }
 
 .space {
@@ -40,8 +41,19 @@
     box-shadow: 0 0 1vw #6b11fa;
     margin-top: -2vw;
     margin-bottom: 2vw;
-    scale: 0.75;
-    transition: scale 0.4s ease, margin-top 0.4s ease;
+    opacity: 0;
+    transform: scale(0.5);
+    transition: margin-top 0.4s ease, opacity 0.6s ease, transform 0.7s cubic-bezier(0.68, -0.6, 0.32, 1.6);
+}
+
+.about .contentzone.offscreen {
+    opacity: 0;
+    transform: scale(0.5);
+}
+
+.about .contentzone.visible {
+    opacity: 1;
+    transform: scale(0.75);
 }
 
 .content {
@@ -62,7 +74,18 @@
     border-radius: 1.2vw;
     background: linear-gradient(36deg, #6b11fa, #c96cff);
     box-shadow: 0 0 1vw #6b11fa;
-    transition: opacity 0.3s ease, box-shadow 0.3s ease;
+    z-index: 10;
+    transition: box-shadow 0.5s cubic-bezier(0.68, -0.6, 0.32, 1.6), opacity 0.7s ease, transform 0.7s cubic-bezier(0.68, -0.6, 0.32, 1.6);
+}
+
+.content.myinfo.offscreen {
+    opacity: 0;
+    transform: translateX(-100vw);
+}
+
+.content.myinfo.visible {
+    opacity: 1;
+    transform: translateX(0vw);
 }
 
 .content.myinfo:hover {
@@ -98,6 +121,17 @@
     box-shadow: inset 0 0 1.5vw rgb(0, 0, 0);
     transition: box-shadow 0.3s ease;
     cursor: pointer;
+    transition: opacity 0.6s cubic-bezier(0.68, -0.6, 0.32, 1.6), transform 0.6s cubic-bezier(0.68, -0.6, 0.32, 1.6);
+}
+
+.content.pasion.offscreen {
+    transform: translateX(100vw);
+    opacity: 0;
+}
+
+.content.pasion.visible {
+    transform: translateX(0);
+    opacity: 1;
 }
 
 .content.pasion:hover {
@@ -115,6 +149,24 @@
 .bodytext.pasion {
     margin: 0 3vw 1vw;
     text-align: justify;
+}
+
+.content.aspire,
+.content.declare {
+    opacity: 0;
+    transition: opacity 0.5s ease, transform 0.7s cubic-bezier(0.68, -0.6, 0.32, 1.6);
+}
+
+.content.aspire.offscreen,
+.content.declare.offscreen {
+    opacity: 0;
+    transform: scale(0.8);
+}
+
+.content.aspire.visible,
+.content.declare.visible {
+    opacity: 1;
+    transform: scale(1);
 }
 
 .bold {
@@ -158,22 +210,24 @@
     position: relative;
 }
 
-.skillname {
+.skill .skillname {
     font-size: 2.5vw;
     font-weight: 500;
     font-family: 'prompt';
     width: 24vw;
     padding: 2vw;
     border: 0.1vw solid #6b11fa;
+    background-color: rgb(27, 27, 27);
     border-radius: 2vw;
     box-shadow: inset 0 0 1vw rgb(107, 20, 179);
-    transition: box-shadow 0.4s ease, color 0.4s ease, border 0.4s ease;
+    transition: box-shadow 0.4s ease, color 0.4s ease, border 0.4s ease, opacity 0.8s ease, transform 0.7s cubic-bezier(0.68, -0.6, 0.32, 1.6);
     cursor: pointer;
+    z-index: 0;
 }
 
 .skillconfig {
     position: absolute;
-    z-index: 10;
+    z-index: 2;
     display: flex;
     align-items: center;
     border-radius: 0vw;
@@ -201,6 +255,55 @@
     margin-top: 0.5vw;
     border-radius: 2vw;
     box-shadow: 0 0 1vw #6b11fa;
+}
+
+.lsk .skillname {
+    transform: translateX(-100vw);
+    opacity: 0;
+    transition: box-shadow 0.4s ease, color 0.4s ease, border 0.4s ease, opacity 0.8s ease, transform 0.7s cubic-bezier(0.68, -0.6, 0.32, 1.3);
+}
+
+.lsk.offscreen .skillname {
+    transform: translateX(-100vw);
+    opacity: 0;
+}
+
+.lsk.visible .skillname {
+    transform: translateX(0);
+    opacity: 1;
+}
+
+.rsk .skillname {
+    transform: translateX(100vw);
+    opacity: 0;
+    transition: box-shadow 0.4s ease, color 0.4s ease, border 0.4s ease, opacity 0.8s ease, transform 0.7s cubic-bezier(0.68, -0.6, 0.32, 1.3);
+}
+
+.rsk.offscreen .skillname {
+    transform: translateX(100vw);
+    opacity: 0;
+}
+
+.rsk.visible .skillname {
+    transform: translateX(0);
+    opacity: 1;
+}
+
+.msk .skillname {
+    transform: scale(0.5);
+    opacity: 0;
+    transition: box-shadow 0.4s ease, color 0.4s ease, border 0.4s ease, opacity 0.2s ease 0.4s, transform 0.4s cubic-bezier(0.68, -0.6, 0.32, 1.7) 0.3s;
+}
+
+.msk.offscreen .skillname {
+    transform: scale(0.5);
+    opacity: 0;
+}
+
+.msk.visible .skillname {
+    transform: scale(1);
+    opacity: 1;
+    background-color: rgb(27, 27, 27);
 }
 
 .myproject {
@@ -269,11 +372,10 @@
     width: 5vw;
     border-radius: 50%;
     background-color: #ffffffe8;
-    transform: scale(0.7);
-    transition: color 0.5s ease, background-color 0.6s ease, transform 0.5s ease, box-shadow 0.5s ease;
+    transition: color 0.5s ease, background-color 0.6s ease, transform 1s ease;
 }
 
-.work .work0 {
+.work0 {
     grid-column: 2;
     grid-row: 2;
     background-color: #ffffff;
@@ -286,8 +388,77 @@
     height: 5vw;
     width: 5vw;
     border-radius: 50%;
-    transform: scale(0.7);
-    transition: color 0.5s ease, background-color 0.6s ease, transform 0.5s ease, box-shadow 0.5s ease;
+    transform: scale(0.7) translate(-600vw, 100vh);
+    transition: color 0.5s ease, background-color 0.6s ease, transform 1s ease;
+}
+
+.project.visible a,
+.project.visible .work0 {
+    transform: scale(0.7) translate(0);
+}
+
+.work1 {
+    transform: scale(0.7) translate(-600vw, 100vh);
+}
+
+.work2 {
+    transform: scale(0.7) translate(-600vw, -150vh);
+}
+
+.work3 {
+    transform: scale(0.7) translate(-600vw, 200vh);
+}
+
+.work4 {
+    transform: scale(0.7) translate(600vw, -300vh);
+}
+
+.work5 {
+    transform: scale(0.7) translate(600vw, 0vh);
+}
+
+.work6 {
+    transform: scale(0.7) translate(600vw, 100vh);
+}
+
+.work7 {
+    transform: scale(0.7) translate(600vw, -50vh);
+}
+
+.work8 {
+    transform: scale(0.7) translate(600vw, 300vh);
+}
+
+.project.offscreen .work1 {
+    transform: scale(0.7) translate(-600vw, 100vh);
+}
+
+.project.offscreen .work2 {
+    transform: scale(0.7) translate(-600vw, -150vh);
+}
+
+.project.offscreen .work3 {
+    transform: scale(0.7) translate(-600vw, 200vh);
+}
+
+.project.offscreen .work4 {
+    transform: scale(0.7) translate(600vw, -300vh);
+}
+
+.project.offscreen .work5 {
+    transform: scale(0.7) translate(600vw, 50vh);
+}
+
+.project.offscreen .work6 {
+    transform: scale(0.7) translate(600vw, 100vh);
+}
+
+.project.offscreen .work7 {
+    transform: scale(0.7) translate(600vw, -50vh);
+}
+
+.project.offscreen .work8 {
+    transform: scale(0.7) translate(600vw, 300vh);
 }
 
 .work:hover {
@@ -322,6 +493,11 @@
     opacity: 0;
 }
 
+.contact {
+    width: 60%;
+    margin: auto;
+}
+
 .contact .title {
     margin-bottom: 4vw;
 }
@@ -333,21 +509,18 @@ textarea {
     border: none;
     box-sizing: border-box;
     padding: 1.2vw 2.5vw;
-    margin: auto;
     margin-top: 1.5vw;
     border: 0.1vw solid #5900ff;
     border-radius: 2vw;
-    width: 60%;
+    width: 100%;
     color: white;
     font-size: 1.6vw;
     resize: vertical;
     box-shadow: 0 0 0.5vw #5900ff;
     caret-color: #5900ff;
-    transition: transform 0.4s ease, border-color 0.4s ease, box-shadow 0.4s ease;
 }
 
-input:focus,
-textarea:focus {
+.cusinfo.visible:focus {
     transform: scale(1.05);
     border-color: #8a4aff;
     box-shadow: 0 0 1vw #5900ff;
@@ -357,13 +530,41 @@ textarea:focus {
     font-size: 1.7vw;
     font-weight: 600;
     text-align: center;
-    background: linear-gradient(45deg, #5900ff, #db82ff);
+    background: linear-gradient(15deg, #5900ff, #db82ff);
     width: 60%;
     box-sizing: border-box;
     padding: 2vw 1.8vw;
     border-radius: 50vw;
     margin: auto;
     margin-top: 3vw;
+    cursor: pointer;
+}
+
+.cusinfo {
+    transform: translateY(100vh) scale(0.9);
+    transition: transform 0.7s cubic-bezier(0.68, -0.6, 0.32, 1.3), border-color 0.4s ease, box-shadow 0.4s ease;
+}
+
+.cusinfo.offscreen {
+    transform: translateY(100vh) scale(0.9);
+}
+
+.cusinfo.visible {
+    transform: translateY(0) scale(1);
+}
+
+.sendcontact:hover {
+    box-shadow: 0 0 1vw rgb(162, 0, 255), inset 0 0 1.5vw rgb(170, 65, 255);
+}
+
+.sendcontact:active {
+    background: linear-gradient(15deg, #5900ffb4, #dc82ffa1);
+}
+
+.error.cusinfo {
+    margin: 1vw;
+    font-size: 1.3vw;
+    color: rgb(213, 142, 255);
 }
 
 #copyright {
@@ -373,6 +574,7 @@ textarea:focus {
     margin-left: -8vw;
     padding: 1.5vw;
     font-size: 1.6vw;
+    z-index: 50;
     color: rgba(255, 255, 255, 0.747);
 }
 
