--- a/a.Home.css
+++ b/a.Home.css
@@ -372,7 +372,8 @@
     width: 5vw;
     border-radius: 50%;
     background-color: #ffffffe8;
-    transition: color 0.5s ease, background-color 0.6s ease, transform 1s ease;
+    transition: color 0.5s ease, background-color 0.6s ease, transform 1s cubic-bezier(.29, 2.3, .85, .64);
+    pointer-events: none;
 }
 
 .work0 {
@@ -389,7 +390,7 @@
     width: 5vw;
     border-radius: 50%;
     transform: scale(0.7) translate(-600vw, 100vh);
-    transition: color 0.5s ease, background-color 0.6s ease, transform 1s ease;
+    transition: color 0.5s ease, background-color 0.6s ease, transform 1s cubic-bezier(.29, 2.3, .85, .64);
 }
 
 .project.visible a,
@@ -471,6 +472,7 @@
     background-color: #6a11fa70;
     transition: background-color 0.3s ease;
     box-shadow: inset 0 0 1.5vw rgb(170, 65, 255);
+    pointer-events: all;
 }
 
 .work a:hover {
