--- a/reset.css
+++ b/reset.css
@@ -163,7 +163,7 @@ html {
 
 img {
 	-webkit-user-drag: none;
-	user-drag: none;
+	--user-drag: none;
 }
 
 * {
@@ -219,7 +219,6 @@ body {
 	width: 100vw;
 	overflow-x: hidden;
 	overflow-y: auto;
-	transition: text-shadow 0.5s ease;
 	background-color: #13131300;
 	animation: fadeIn 0.7s ease-in-out forwards;
 }
