--- a/a.Home.css
+++ b/a.Home.css
@@ -372,7 +372,7 @@
     width: 5vw;
     border-radius: 50%;
     background-color: #ffffffe8;
-    transition: color 0.5s ease, background-color 0.6s ease, transform 1s cubic-bezier(.29, 2.3, .85, .64);
+    transition: color 0.5s ease, background-color 0.6s ease, transform 1.5s cubic-bezier(.42, 4.3, .50, -1.5);
     pointer-events: none;
 }
 
@@ -390,7 +390,7 @@
     width: 5vw;
     border-radius: 50%;
     transform: scale(0.7) translate(-600vw, 100vh);
-    transition: color 0.5s ease, background-color 0.6s ease, transform 1s cubic-bezier(.29, 2.3, .85, .64);
+    transition: color 0.5s ease, background-color 0.6s ease, transform 1.4s cubic-bezier(.42, 4.3, .50, -1.5);
 }
 
 .project.visible a,
