--- a/a.Home.css
+++ b/a.Home.css
@@ -1,3 +1,13 @@
+input[type=number] {
+    -moz-appearance: textfield;
+}
+
+input[type=number]::-webkit-inner-spin-button,
+input[type=number]::-webkit-outer-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+}
+
 #body {
     color: white;
     font-family: 'montserrat';
@@ -390,7 +400,7 @@
     width: 5vw;
     border-radius: 50%;
     transform: scale(0.7) translate(-600vw, 100vh);
-    transition: color 0.5s ease, background-color 0.6s ease, transform 1.4s cubic-bezier(.42, 4.3, .50, -1.5);
+    transition: color 0.5s ease, background-color 0.6s ease, transform 1.5s cubic-bezier(.42, 4.3, .50, -1.5);
 }
 
 .project.visible a,
@@ -428,6 +438,15 @@
 
 .work8 {
     transform: scale(0.7) translate(600vw, 300vh);
+}
+
+.project.offscreen a,
+.project.offscreen .work0 {
+    transition: color 0.5s ease, background-color 0.6s ease, transform 0.8s ease;
+}
+
+.project.offscreen .work1 {
+    transform: scale(0.7) translate(-600vw, 100vh);
 }
 
 .project.offscreen .work1 {
@@ -520,6 +539,10 @@ textarea {
     resize: vertical;
     box-shadow: 0 0 0.5vw #5900ff;
     caret-color: #5900ff;
+}
+
+#messagetome {
+    font-size: 1.1vw;
 }
 
 .cusinfo.visible:focus {
